# syntactical

./: LICENSE  README  README.md  default.nix  indent.hs  run-permutations.sh  run-tests.sh  runtests.hs  syntactical.cabal
Language/: Syntactical.hs
Language/Syntactical/: Data.hs  Indent.hs  Yard.hs
Language/Syntactical/Tests/: Examples.hs
Text/: Syntactical.hs
Text/Syntactical/: Data.hs  Indent.hs  String.hs  Yard.hs
Text/Syntactical/Tests/: Examples.hs
nix/: contents.nix  overlay.nix  overlays.nix
scripts/: run-permutations.sh  run-tests.sh
src/Text/Syntactical/: Data.hs  Indent.hs  Yard.hs
tests/: Ambiguous.hs  Holes.hs  Indent.hs  Priority.hs  Simple.hs  ghc-fixity.hs  parsec-fixity.hs  permutations.hs  suite.hs
