cabal-version:       >=1.10
Name:                syntactical
Version:             0.1.1
Synopsis:            Distfix expression parsing library
Description:         Syntactical is an expression parsing library. It supports
                     distfix operators and function application written as
                     juxtaposition of symbols.
License:             BSD3
License-file:        LICENSE
Author:              Vo Minh Thu <noteed@gmail.com>
Maintainer:          Vo Minh Thu <noteed@gmail.com>
Stability:           Provisional
Category:            Parsing
Build-type:          Simple
Extra-source-files:  README.md, tests/*.hs

Source-repository head
  type: git
  location: git://github.com/noteed/syntactical.git

Library
  Exposed-modules:     Text.Syntactical.Data,
                       Text.Syntactical.Indent,
                       Text.Syntactical.Yard,
                       Text.Syntactical

  Build-depends:    base >= 4 && < 5
                  , parsec

  ghc-options:         -Wall

test-suite syntactical-tests
  type:                exitcode-stdio-1.0
  main-is:             suite.hs
  build-depends:       base
                     , HUnit
                     , parsec
                     , syntactical
                     , test-framework
                     , test-framework-hunit
  hs-source-dirs:      tests
  ghc-options:         -Wall

test-suite syntactical-permutations
  type:                exitcode-stdio-1.0
  main-is:             permutations.hs
  build-depends:       base
                     , HUnit
                     , syntactical
                     , test-framework
                     , test-framework-hunit
  hs-source-dirs:      tests
  ghc-options:         -Wall
